--- a/HTML/main.html
+++ b/HTML/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,13 @@
 </head>
 <body>
 
-<header>
-    <h1>메인페이지</h1>
-</header>
+    <div id="wrap">
+        <div id="header"></div>
+        <div id="slider"></div>
+        <div id="contents"></div>
+        <div id="footer"></div>
+    </div>
+
 
     
 </body>
