--- a/HTML/main.html
+++ b/HTML/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>핏넥서스 메인페이지</title>
+    <link rel="stylesheet" href="/HTML/css/main.css">
 </head>
 <body>
 
